tests/baselines/reference/parserClassDeclaration12.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration12.ts (1 errors) ====
    class C {
       constructor();
       ~~~~~~~~~~~~~~
!!! error TS2394: Overload signature is not compatible with function implementation.
       constructor(a) { }
    }